minor styling update

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -18,11 +18,15 @@
     <div id="content-container">
       <div id="review-container">
         <div id="reviews">reviews</div>
+        <div id="people-viewed"></div>
       </div>
+      
       <div id="businessInfoSidebar">Biz info sidebar goes here</div>
     </div>
 
-    <div id="ad"></div>
+    <!-- <div id="ad-top"></div> -->
+    <div id="ad-side"></div>
+
     <script src="http://localhost:9001/biz/200/bundle.js"></script>
     <script src="http://localhost:9002/biz/200/dist/bundle.js"></script>
     <script src="http://localhost:9003/dist/bundle.js"></script>
