--- a/public/partials/header.ejs
+++ b/public/partials/header.ejs
@@ -9,14 +9,14 @@
 <div id="nav-header">
   <div id="nav-container">
     <div class="nav-cont">
-      <div class="nav">Restaurants</div>
+      <div class="nav"><i class="fas fa-utensils"></i>  Restaurants</div>
     </div>
     <div class="nav-cont">
-      <div class="nav">Nightlife</div>
+      <div class="nav"><i class="fas fa-glass-martini"></i>  Nightlife</div>
     </div>
     <div class="nav-cont">
-      <div class="nav">Home Services</div>
-    </div>
+      <div class="nav"><i class="fas fa-wrench"></i>  Home Services</div>
+    </div> 
     <div class="nav-cont">
       <div class="nav">Write a Review</div>
     </div>
