--- a/public/index.ejs
+++ b/public/index.ejs
@@ -17,15 +17,20 @@
     </div>
     <div id="content-container">
       <div id="review-container">
+        <div id="related-top"></div>
         <div id="reviews">reviews</div>
-        <div id="people-viewed"></div>
       </div>
       
-      <div id="businessInfoSidebar">Biz info sidebar goes here</div>
+      <div id="sidebar-container">
+        <div id="businessInfoSidebar">Biz info sidebar goes here</div> 
+        <div id="related-side"></div>
+        <div id="people-viewed"></div>
+      </div>
+
     </div>
 
-    <!-- <div id="ad-top"></div> -->
-    <div id="ad-side"></div>
+
+
 
     <script src="http://localhost:9001/biz/200/bundle.js"></script>
     <script src="http://localhost:9002/biz/200/dist/bundle.js"></script>
