--- a/public/index.ejs
+++ b/public/index.ejs
@@ -32,7 +32,7 @@
       window.REVIEWS_URL = '<%=reviewsURL%>';
     </script>
     <script src="http://localhost:9001/biz/200/bundle.js"></script>
-    <script src="http://localhost:9002/biz/200/dist/bundle.js"></script>
+    <script src="<%=`${photoGalleryURL}/dist/bundle.js`%>"></script>
     <script src="<%=`${reviewsURL}/dist/bundle.js`%>"></script>
     <script src="http://localhost:9004/dist/bundle.js"></script>
 
