--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://localhost:9004/style.css">
+    <link rel="stylesheet" type="text/css" href="<%=`${reviewsURL}/style.css`%>">
     <link rel="stylesheet" type="text/css" href="/proxy-style.css">
     <link rel="icon" type="image/png" href="/favicon.ico">
     <title><%-businessName%> - <%=reviewCount%> Reviews</title>
