fixed bug on index.ejs

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -31,7 +31,7 @@
     <script>
       window.REVIEWS_URL = '<%=reviewsURL%>';
       window.BUSINESS_INFO_URL = '<%=photoGalleryURL%>';
-      window.RELATED_URL = '<%=relatedURL';
+      window.RELATED_URL = '<%=relatedURL%>';
     </script>
     <script src="<%=`${businessInfoURL}/biz/200/bundle.js`%>"></script>
     <script src="<%=`${photoGalleryURL}/dist/bundle.js`%>"></script>
